fix minor spacing in hero and info pages

--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -57,8 +57,7 @@
       flex-direction: column;
       top: auto;
       bottom: 3%;
-      // left: 30%;
-      gap: 2rem;
+      gap: 0;
     }
 
     &-col {
